--- a/Tsumugi/TsumugiRenderer/Renderable.xaml
+++ b/Tsumugi/TsumugiRenderer/Renderable.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl x:Class="TsumugiEditor.Views.Panes.PreviewPane"
+﻿<UserControl x:Class="TsumugiRenderer.Renderable"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TsumugiEditor.Views.Panes"
-             xmlns:renderer="clr-namespace:TsumugiRenderer;assembly=TsumugiRenderer"
+             xmlns:local="clr-namespace:TsumugiRenderer"
              mc:Ignorable="d" 
-             d:DesignHeight="600" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             SizeChanged="UserControl_SizeChanged">
     <Grid>
-        <renderer:Renderable x:Name="_renderable" />
+            
     </Grid>
 </UserControl>
