--- a/Tsumugi/TsumugiEditor/Views/Panes/PreviewPane.xaml
+++ b/Tsumugi/TsumugiEditor/Views/Panes/PreviewPane.xaml
@@ -11,7 +11,7 @@
     <Grid>
         <WindowsFormsHost x:Name="_windowsFormsHost">
             <WindowsFormsHost.Child>
-                <renderer:RenderablePanel />
+                <renderer:Renderable />
             </WindowsFormsHost.Child>
         </WindowsFormsHost>
     </Grid>
